# sudomake-friends

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-06-10-friend-revamp.md
docs/superpowers/specs/: 2026-06-10-friend-revamp-design.md
friends/.template/: config.yaml
friends/alex/: SOUL.md  config.yaml
friends/brook/: SOUL.md  config.yaml
friends/casey/: SOUL.md  config.yaml
friends/connor/: SOUL.md
friends/drew/: SOUL.md  config.yaml
friends/gil/: config.yaml
friends/harper/: SOUL.md  config.yaml
friends/jordan/: SOUL.md  config.yaml
friends/priya/: SOUL.md  config.yaml
friends/riley/: SOUL.md  config.yaml
friends/sage/: SOUL.md  config.yaml
scripts/: initialize.py  lib.py
scripts/migrations/: __init__.py  helpers.py  runner.py
scripts/wizard/: __init__.py  __main__.py  axes.py  checkpoint.py  claude.py  editor.py  friends.py  main.py  paths.py  platforms.py  scraper.py  selection.py  steps.py  telegram_setup.py  tui.py
scripts/wizard/migrations/: helpers.py  runner.py
scripts/wizard/migrations/2026-04-10_add_jokiness_whininess/: README.md  migration.py
src/: bot.py  brain.py  chat_history.py  config.py  echo_detector.py  link_preview.py  main.py  memory_validator.py  nag_detector.py  news.py  schedule.py
tests/: test_axes.py  test_brain_dials.py  test_functional.py  test_initialize_bootstrap.py  test_migration_jokiness.py  test_migrations_helpers.py  test_migrations_runner.py  test_nag_detector.py
